# DSPlayer

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
3rdParties/mediainfo/MediaInfoLib/Project/CMake/: CMakeLists.txt
3rdParties/mediainfo/MediaInfoLib/Source/MediaInfo/: File_Dummy.cpp  File_Dummy.h  (+49 more)
3rdParties/taglib/: CMakeLists.txt  ConfigureChecks.cmake  Doxyfile.cmake  taglib-config.cmake  taglib-config.cmd.cmake  taglib.pc.cmake
3rdParties/taglib/bindings/c/: CMakeLists.txt  tag_c.cpp  tag_c.h
3rdParties/taglib/cmake/modules/: FindCppUnit.cmake  MacroEnsureVersion.cmake
3rdParties/taglib/doc/: api-header.html  taglib-api.css
3rdParties/taglib/taglib/: CMakeLists.txt  audioproperties.cpp  audioproperties.h  fileref.cpp  fileref.h  tag.cpp  tag.h  tagunion.cpp  tagunion.h  tagutils.cpp  tagutils.h
3rdParties/taglib/taglib/ape/: apefile.cpp  apefile.h  apefooter.cpp  apefooter.h  apeitem.cpp  apeitem.h  apeproperties.cpp  apeproperties.h  apetag.cpp  apetag.h
3rdParties/taglib/taglib/asf/: asfattribute.cpp  asfattribute.h  asffile.cpp  asffile.h  asfpicture.cpp  asfpicture.h  asfproperties.cpp  asfproperties.h  asftag.cpp  asftag.h  asfutils.h
3rdParties/taglib/taglib/flac/: flacfile.cpp  flacfile.h  flacmetadatablock.cpp  flacmetadatablock.h  flacpicture.cpp  flacpicture.h  flacproperties.cpp  flacproperties.h  flacunknownmetadatablock.cpp  flacunknownmetadatablock.h
3rdParties/taglib/taglib/it/: itfile.cpp  itfile.h  itproperties.cpp  itproperties.h
3rdParties/taglib/taglib/mod/: modfile.cpp  modfile.h  modfilebase.cpp  modfilebase.h  modfileprivate.h  modproperties.cpp  modproperties.h  modtag.cpp  modtag.h
3rdParties/taglib/taglib/mp4/: mp4atom.cpp  mp4atom.h  mp4coverart.cpp  mp4coverart.h  mp4file.cpp  mp4file.h  mp4item.cpp  mp4item.h  mp4properties.cpp  mp4properties.h  mp4tag.cpp  mp4tag.h
3rdParties/taglib/taglib/mpc/: mpcfile.cpp  mpcfile.h  mpcproperties.cpp  mpcproperties.h
3rdParties/taglib/taglib/mpeg/: mpegfile.cpp  mpegfile.h  mpegheader.cpp  mpegheader.h  mpegproperties.cpp  mpegproperties.h  mpegutils.h  xingheader.cpp  xingheader.h
3rdParties/taglib/taglib/ogg/: oggfile.cpp  oggfile.h  oggpage.cpp  oggpage.h  oggpageheader.cpp  oggpageheader.h  xiphcomment.cpp  xiphcomment.h
3rdParties/taglib/taglib/riff/: rifffile.cpp  rifffile.h  riffutils.h
3rdParties/taglib/taglib/s3m/: s3mfile.cpp  s3mfile.h  s3mproperties.cpp  s3mproperties.h
3rdParties/taglib/taglib/toolkit/: taglib.h  tbytevector.cpp  tbytevector.h  tbytevectorlist.cpp  tbytevectorlist.h  tbytevectorstream.cpp  tbytevectorstream.h  tdebug.cpp  tdebug.h  tdebuglistener.cpp  tdebuglistener.h  tfile.cpp  tfile.h  tfilestream.cpp  tfilestream.h  tiostream.cpp  tiostream.h  tlist.h  tlist.tcc  tmap.h  tmap.tcc  tpropertymap.cpp  tpropertymap.h  trefcounter.cpp  trefcounter.h  tstring.cpp  tstring.h  tstringlist.cpp  tstringlist.h  tutils.h  tzlib.cpp  tzlib.h  unicode.cpp  unicode.h
3rdParties/taglib/taglib/trueaudio/: trueaudiofile.cpp  trueaudiofile.h  trueaudioproperties.cpp  trueaudioproperties.h
3rdParties/taglib/taglib/wavpack/: wavpackfile.cpp  wavpackfile.h  wavpackproperties.cpp  wavpackproperties.h
3rdParties/taglib/taglib/xm/: xmfile.cpp  xmfile.h  xmproperties.cpp  xmproperties.h
Core/: Core.h  CoreFileSystem.cpp  CoreFileSystem.h  CoreTools.cpp  CoreTools.h  CoreTypes.h  DateTimeHelper.cpp  DateTimeHelper.h  Pipe.cpp  Pipe.h  UnixDomainSocket.cpp  UnixDomainSocket.h
Core/MimeType/: MimeType.cpp  MimeType.h
OldGtkmmTests/: CMakeLists.txt
OldGtkmmTests/gtkp/: main.cpp
OldGtkmmTests/mainLoop/: main.cpp
Tests/: CMakeLists.txt
Tests/MediaInfo/: main.cpp
Tests/UnixDomainSocket/: client.cpp  server.cpp
Tests/gtkp/: main.cpp
Tests/mainLoop/: main.cpp
Tests/scroll/: main.cpp
Tests/thread/: main.cpp
Tests/zetcode/: main.cpp  mycpu.cpp  mycpu.h
UI/: Application.cpp  Application.h  CommunicateThread.cpp  CommunicateThread.h  InstanceCommunicate.cpp  InstanceCommunicate.h  PlayerWindow.cpp  PlayerWindow.h
UI/Components/: AudioTreeWidgetItem.cpp  AudioTreeWidgetItem.h  BaseWindow.h  SeekBar.cpp  SeekBar.h  TreeView.cpp  TreeView.h
(+525 files in other folders)
